@@ -33,7 +33,7 @@
 /*
  * Portions Copyright (c) 2005 Gunnar Ritter, Freiburg i. Br., Germany
  *
- * Sccsid @(#)t6.c	1.190 (gritter) 3/4/07
+ * Sccsid @(#)t6.c	1.191 (gritter) 5/7/07
  */
 
 /*
@@ -1334,13 +1334,19 @@ addlig(int f, tchar *from, int to)
 	 * Fi, and Fl, hide them. The ".flig" request is intended for
 	 * use in combination with expert fonts only.
 	 */
-	if (to == LIG_FF && fitab[f][LIG_FF-32] != NOCODE)
+	if ((to == LIG_FF || cbits(from[0]) == 'f' && cbits(from[1]) == 'f' &&
+			     cbits(from[2]) == 0) &&
+			fitab[f][LIG_FF-32] != NOCODE)
 		if (codetab[f][fitab[f][LIG_FF-32]] < 32)
 			fitab[f][LIG_FF-32] = 0;
-	if (to == LIG_FFI && fitab[f][LIG_FFI-32] != NOCODE)
+	if ((to == LIG_FFI || cbits(from[0]) == 'f' && cbits(from[1]) == 'f' &&
+			      cbits(from[2]) == 'i' && cbits(from[3]) == 0) &&
+			fitab[f][LIG_FFI-32] != NOCODE)
 		if (codetab[f][fitab[f][LIG_FFI-32]] < 32)
 			fitab[f][LIG_FFI-32] = 0;
-	if (to == LIG_FFL && fitab[f][LIG_FFL-32] != NOCODE)
+	if ((to == LIG_FFL || cbits(from[0]) == 'f' && cbits(from[1]) == 'f' &&
+			      cbits(from[2]) == 'l' && cbits(from[3]) == 0) &&
+			fitab[f][LIG_FFL-32] != NOCODE)
 		if (codetab[f][fitab[f][LIG_FFL-32]] < 32)
 			fitab[f][LIG_FFL-32] = 0;
 }
